--- a/assets/fonts/suisse/stylesheet.css
+++ b/assets/fonts/suisse/stylesheet.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: 'Suisse';
-    src: url('../fonts/suisse/suisseneue-regular-webxl-webfont.eot');
-    src: url('../fonts/suisse/suisseneue-regular-webxl-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/suisse/suisseneue-regular-webxl-webfont.woff2') format('woff2'),
-         url('../fonts/suisse/suisseneue-regular-webxl-webfont.woff') format('woff'),
-         url('../fonts/suisse/suisseneue-regular-webxl-webfont.ttf') format('truetype'),
-         url('../fonts/suisse/suisseneue-regular-webxl-webfont.svg#fontuploaded_file') format('svg');
+    src: url('suisseneue-regular-webxl-webfont.eot');
+    src: url('suisseneue-regular-webxl-webfont.eot?#iefix') format('embedded-opentype'),
+         url('suisseneue-regular-webxl-webfont.woff2') format('woff2'),
+         url('suisseneue-regular-webxl-webfont.woff') format('woff'),
+         url('suisseneue-regular-webxl-webfont.ttf') format('truetype'),
+         url('suisseneue-regular-webxl-webfont.svg#fontuploaded_file') format('svg');
     font-weight: normal;
     font-style: normal;
 
