--- a/docs/components/heros.html
+++ b/docs/components/heros.html
@@ -710,7 +710,7 @@
 	<h2 class="hero__tagline">Lorem ipsum dolor sit amet, consectetur.</h2>
 	<a href="#" class="btn btn-default hero__cta">boom</a>
 </div>
-<img class="hero__visual" src="https://media1.nfb.ca/medias/nfb_tube/uploaded_images/2017/wa-main-img.jpg" />
+<img class="hero__visual" src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" alt="" />"/&gt;
 </div>
 
 
