FRONT-487:new icons

--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -720,7 +720,7 @@
 <div class="m-carousel-thumbnails no-padding-top">
 <div class="vignetteGratuite vignette">
   <a href="#" class="containerScreenshot">
-    <img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
+    <img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
   </a>
   <div class="bottomThumbnail">
     <a href="#" class="titre">Vignette gratuite avec un texte de titre vraiment beaucoup trop long pour tester qu'il est bien tronqué</a>
@@ -780,7 +780,7 @@
 		<li class="col-sm-4">
 			<div class="vignetteGratuite vignette">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette gratuite avec un texte de titre vraiment beaucoup trop long pour tester qu'il est bien tronqué</a>
@@ -800,7 +800,7 @@
 		<li class="col-sm-4">
 			<div class="vignetteGratuite vignette interactif">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette interactive</a>
@@ -816,7 +816,7 @@
 		<li class="col-sm-4">
 			<div class="vignetteGratuite vignette apps">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette application</a>
@@ -905,7 +905,7 @@
 <div class="m-carousel-thumbnails thumbnail-horizontal">
 				<div class="vignette">
 					<a href="#" class="containerScreenshot containerScreenshotPochette">
-						<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="En dernier recours" style="visibility: inherit; opacity: 1;" />
+						<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2014/En_dernier_recours_LG.jpg" class="img-responsive" alt="En dernier recours" style="visibility: inherit; opacity: 1;" />
 					</a>
 					<div class="infos">
 						<a href="#" class="titre">En dernier recours</a>
@@ -931,7 +931,7 @@
 					<li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 	<div class="vignette">
 		<a href="#" class="containerScreenshot">
-			<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
+			<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
 		</a>
 		<div class="bottomThumbnail">
 
@@ -943,10 +943,10 @@
 <li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 	<div class="vignettePlaylist vignette">
 		<a href="#" class="containerScreenshot row">
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
 		</a>
 		<div class="bottomThumbnail">
 
@@ -958,10 +958,10 @@
 <li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 	<div class="vignettePlaylist vignette edit">
 		<a href="#" class="containerScreenshot row">
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-			<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+			<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
 		</a>
 		<div class="bottomThumbnail">
 			<a href="#" class="titre">La tranchée</a>
@@ -1032,10 +1032,10 @@
 		<li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 			<div class="vignettePlaylist vignette edit">
 				<a href="#" class="containerScreenshot row">
-					<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-					<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-					<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
-					<span class="col-xs-6"><img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+					<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+					<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+					<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
+					<span class="col-xs-6"><img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" /></span>
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette playlist</a>
@@ -1070,7 +1070,7 @@
 		<li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 			<div class="vignetteLesson vignette">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette de leçon</a>
@@ -1102,7 +1102,7 @@
 		<li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 			<div class="vignetteLesson vignette">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" style="visibility: inherit; opacity: 1;" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette - variante</a>
@@ -1137,7 +1137,7 @@
 		<li class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
 			<div class="vignetteChapitre vignette">
 				<a href="#" class="containerScreenshot">
-					<img src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" class="img-responsive" alt="" />
+					<img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="" />
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette chapitre</a>
