--- a/docs/components/images.html
+++ b/docs/components/images.html
@@ -711,7 +711,7 @@
 
 
 <figure class="">
-<img class="" src="../../assets/img/premiereVisite/Devils-Toy_XL.jpg" alt="" />
+<img class="" src="https://media1.nfb.ca/medias/nfb_tube/uploaded_images/2017/wa-main-img.jpg" alt="" />
 <figcaption class="">Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)</figcaption>
 </figure>
 
