--- a/docs/components/navigation.html
+++ b/docs/components/navigation.html
@@ -774,7 +774,7 @@
   <li style="height: 71px;">
     <div class="withPhoto">
       <span class="mask-circle img-circle">
-        <img src="https://dkyhanv6paotz.cloudfront.net/medias/nfb_tube/curator_images/2016/albert-ohayon_SM.jpg" class="img-rectangle" alt="Albert Ohayon" />
+        <img src="https://media1.nfb.ca/medias/nfb_tube/curator_images/2016/albert-ohayon_SM.jpg" class="img-rectangle" alt="Albert Ohayon" />
       </span>
       <h1>Albert Ohayon</h1>
     </div>
